--- a/html/index.html
+++ b/html/index.html
@@ -10,22 +10,22 @@
 <body>
 
 <div class="header">
-  <div class="logo">
-    <img src="image/login.png">
-    <a> Se connecter </a>
-  </div>
-  <div class="navbar">
-      <a href="#" > Home </a>
-      <a href="#" > About </a>
-      <a href="#" >  Form </a>
-      <a href="#" > Shop </a>
-      <a href="#" > Connexion </a>
-  </div>
-
-  <div class="connexion">
-    <a> Se connecter </a>
-    <img src="image/login.png">
-  </div>
+    <div class='titres'>
+        <div> <img alt="Logo Prism " src="images/login.png"> </div>
+        <div class="prism highlightTextIn"> <a alt="PRISM+" href="index2.html"> PRISM+ </a> </div>
+    </div>
+    <div class="navbar borderXwidth">
+        <a href="index2.html" class="rubrique"> HOME </a>
+        <a href="shop.html" class="rubrique"> SHOP </a>
+        <a href="about.html" class="rubrique"> ABOUT </a>
+        <a href="members.html" class="rubrique"> MEMBERS </a>
+        <a href="contact.html" class="rubrique"> CONTACT </a>
+        <a href="cart.html" class="rubrique"> CART </a>
+    </div>
+    <div class="log-in">
+        <div class="log-in-logo"> <img alt="login" src="images/login.png"> </div>
+        <div class="prism highlightTextIn"> <a alt="Log In" href="login.html"> Log In </a> </div>
+    </div>
 </div>
 
 </body>
