header et description

--- a/html/index.html
+++ b/html/index.html
@@ -5,26 +5,28 @@
   <title>Index</title>
   <link rel="stylesheet" href="index.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
-  <script src="script.js"></script>
 </head>
 <body>
 
 <div class="header">
-    <div class='titres'>
-        <div> <img alt="Logo Prism " src="images/login.png"> </div>
-        <div class="prism highlightTextIn"> <a alt="PRISM+" href="index2.html"> PRISM+ </a> </div>
+    <div class='subtitle1'>
+        <div> <img alt="Logo" src="images/login.png"> </div>
+        <div class="FreeNote highlightTextIn"> <a alt="FreeNote" href="index.html"> FreeNote </a> </div>
     </div>
-    <div class="navbar borderXwidth">
-        <a href="index2.html" class="rubrique"> HOME </a>
-        <a href="shop.html" class="rubrique"> SHOP </a>
-        <a href="about.html" class="rubrique"> ABOUT </a>
-        <a href="members.html" class="rubrique"> MEMBERS </a>
-        <a href="contact.html" class="rubrique"> CONTACT </a>
-        <a href="cart.html" class="rubrique"> CART </a>
+    <div class='sign-up'>
+        <div> <img alt="sign-up" src="images/login.png"> </div>
+        <div class="FreeNote highlightTextIn"> <a alt="Sign Up" href="signup.html"> Sign up </a> </div>
     </div>
     <div class="log-in">
         <div class="log-in-logo"> <img alt="login" src="images/login.png"> </div>
-        <div class="prism highlightTextIn"> <a alt="Log In" href="login.html"> Log In </a> </div>
+        <div class="FreeNote highlightTextIn"> <a alt="Log In" href="login.html"> Log in </a> </div>
+    </div>
+</div>
+
+<div class="description">
+        <p class="description-subtitle"> Description du site </p>
+    <div class="description-FreeNote">
+        <p> Haec et huius modi quaedam innumerabilia ultrix facinorum impiorum bonorumque praemiatrix aliquotiens operatur Adrastia atque utinam semper quam vocabulo duplici etiam Nemesim appellamus: ius quoddam sublime numinis efficacis, humanarum mentium opinione lunari circulo superpositum, vel ut definiunt alii, substantialis tutela generali potentia partilibus praesidens fatis, quam theologi veteres fingentes Iustitiae filiam ex abdita quadam aeternitate tradunt omnia despectare terrena.</p>
     </div>
 </div>
 
