--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
-
+<div class="background-header">
 <div class="header">
     <div class='subtitle1'>
         <div> <img alt="Logo" src="images/login.png"> </div>
@@ -15,20 +15,37 @@
     </div>
     <div class='sign-up'>
         <div> <img alt="sign-up" src="images/login.png"> </div>
-        <div class="FreeNote highlightTextIn"> <a alt="Sign Up" href="signup.html"> Sign up </a> </div>
+        <div class="FreeNote highlightTextIn"> <a alt="Sign Up" href="formulaire.html"> Sign up </a> </div>
     </div>
     <div class="log-in">
         <div class="log-in-logo"> <img alt="login" src="images/login.png"> </div>
         <div class="FreeNote highlightTextIn"> <a alt="Log In" href="login.html"> Log in </a> </div>
     </div>
 </div>
+</div>
 
 <div class="description">
-        <p class="description-subtitle"> Description du site </p>
+    <p class="description-subtitle"> Description du site </p>
     <div class="description-FreeNote">
         <p> Haec et huius modi quaedam innumerabilia ultrix facinorum impiorum bonorumque praemiatrix aliquotiens operatur Adrastia atque utinam semper quam vocabulo duplici etiam Nemesim appellamus: ius quoddam sublime numinis efficacis, humanarum mentium opinione lunari circulo superpositum, vel ut definiunt alii, substantialis tutela generali potentia partilibus praesidens fatis, quam theologi veteres fingentes Iustitiae filiam ex abdita quadam aeternitate tradunt omnia despectare terrena.</p>
     </div>
 </div>
+
+<div class="description">
+    <p class="description-subtitle"> Description du site </p>
+    <div class="description-FreeNote">
+        <p> Haec et huius modi quaedam innumerabilia ultrix facinorum impiorum bonorumque praemiatrix aliquotiens operatur Adrastia atque utinam semper quam vocabulo duplici etiam Nemesim appellamus: ius quoddam sublime numinis efficacis, humanarum mentium opinione lunari circulo superpositum, vel ut definiunt alii, substantialis tutela generali potentia partilibus praesidens fatis, quam theologi veteres fingentes Iustitiae filiam ex abdita quadam aeternitate tradunt omnia despectare terrena.</p>
+    </div>
+</div>
+
+
+<div class="description">
+    <p class="description-subtitle"> Description du site </p>
+    <div class="description-FreeNote">
+        <p> Haec et huius modi quaedam innumerabilia ultrix facinorum impiorum bonorumque praemiatrix aliquotiens operatur Adrastia atque utinam semper quam vocabulo duplici etiam Nemesim appellamus: ius quoddam sublime numinis efficacis, humanarum mentium opinione lunari circulo superpositum, vel ut definiunt alii, substantialis tutela generali potentia partilibus praesidens fatis, quam theologi veteres fingentes Iustitiae filiam ex abdita quadam aeternitate tradunt omnia despectare terrena.</p>
+    </div>
+</div>
+
 
 </body>
 </html>
