--- a/html/formulaire.html
+++ b/html/formulaire.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="signup.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 </head>
-<body>
+<a>
+
+    <a class="arrow" href="index.html"><img src="https://img.icons8.com/nolan/50/000000/up-left.png"></a>
 
 <div class='Title'>
     <div> <img alt="Logo" src="images/login.png"> </div>
@@ -29,9 +31,11 @@
     <p> Confirmation Mot de Passe </p>
     <input class="bouton" type="password" name="password"/></br></br>
     <p>Conditions générales <input type="checkbox" name="conditions"/></p>
-    <input type="submit" name="action" value="OK"/>
 </form>
+    <input class ="submit" type="submit" name="action" value="Créer un compte"/>
+    <div class="connexion">
+        <a href="login.html"> Déjà inscrit(e) ? Se connecter</a>
+    </div>
 </div>
-
 </body>
 </html>
