--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Index</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="css/index.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
     </div>
     <div class="log-in">
         <div class="log-in-logo"> <img alt="login" src="images/login.png"> </div>
-        <div class="FreeNote highlightTextIn"> <a alt="Log In" href="login.html"> Log in </a> </div>
+        <div class="FreeNote highlightTextIn"> <a alt="Log In" href="login.php"> Log in </a> </div>
     </div>
 </div>
 </div>
