--- a/html/formulaire.html
+++ b/html/formulaire.html
@@ -34,7 +34,7 @@
 </form>
     <input class ="submit" type="submit" name="action" value="Créer un compte"/>
     <div class="connexion">
-        <a href="../login.php"> Déjà inscrit(e) ? Se connecter</a>
+        <a href="../controller/login.php"> Déjà inscrit(e) ? Se connecter</a>
     </div>
 </div>
 </body>
